@@ -95,17 +95,16 @@ pcm_packetizer_c::process(packet_cptr packet) {
 }
 
 void
-pcm_packetizer_c::flush() {
+pcm_packetizer_c::flush_impl() {
   uint32_t size = m_buffer.get_size();
-  if (0 < size) {
-    int64_t samples_here = size * 8 / m_channels / m_bits_per_sample;
-    add_packet(new packet_t(memory_c::clone(m_buffer.get_buffer(), size), m_samples_output * m_s2tc, samples_here * m_s2tc));
+  if (0 >= size)
+    return;
 
-    m_samples_output += samples_here;
-    m_buffer.remove(size);
-  }
+  int64_t samples_here = size * 8 / m_channels / m_bits_per_sample;
+  add_packet(new packet_t(memory_c::clone(m_buffer.get_buffer(), size), m_samples_output * m_s2tc, samples_here * m_s2tc));
 
-  generic_packetizer_c::flush();
+  m_samples_output += samples_here;
+  m_buffer.remove(size);
 }
 
 connection_result_e
