@@ -34,12 +34,14 @@ public:
 
   virtual int process(packet_cptr packet);
   virtual void set_headers();
-  virtual void flush();
 
   virtual const std::string get_format_name(bool translate = true) {
     return translate ? Y("PCM") : "PCM";
   }
   virtual connection_result_e can_connect_to(generic_packetizer_c *src, std::string &error_message);
+
+protected:
+  virtual void flush_impl();
 };
 
 #endif // __P_PCM_H
